--- a/Geosemantic.Api/Geosemantic.Api.csproj
+++ b/Geosemantic.Api/Geosemantic.Api.csproj
@@ -18,19 +18,19 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Xen.Api" Version="4.0.2" />
-    <PackageReference Include="Xen.Command" Version="4.0.3" />
-    <PackageReference Include="Xen.Common" Version="4.0.3" />
-    <PackageReference Include="Xen.Entity" Version="4.0.3" />
-    <PackageReference Include="Xen.Logger" Version="4.0.3" />
-    <PackageReference Include="Xen.Oauth" Version="4.0.3" />
+    <PackageReference Include="Xen.Api" Version="4.0.4" />
+    <PackageReference Include="Xen.Command" Version="4.0.4" />
+    <PackageReference Include="Xen.Common" Version="4.0.4" />
+    <PackageReference Include="Xen.Entity" Version="4.0.4" />
+    <PackageReference Include="Xen.Logger" Version="4.0.4" />
+    <PackageReference Include="Xen.Oauth" Version="4.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ste.Command\Ste.Command.csproj" />
-    <ProjectReference Include="..\Ste.Data\Ste.Data.csproj" />
-    <ProjectReference Include="..\Ste.Queries\Ste.Queries.csproj" />
-    <ProjectReference Include="..\Ste.ViewModel\Ste.ViewModel.csproj" />
+    <ProjectReference Include="..\Geosemantic.Command\Geosemantic.Command.csproj" />
+    <ProjectReference Include="..\Geosemantic.Data\Geosemantic.Data.csproj" />
+    <ProjectReference Include="..\Geosemantic.Queries\Geosemantic.Queries.csproj" />
+    <ProjectReference Include="..\Geosemantic.ViewModel\Geosemantic.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
