--- a/Geosemantic.Api/appsettings.Production.json
+++ b/Geosemantic.Api/appsettings.Production.json
@@ -19,7 +19,7 @@
     "SmtpFrom": "steengineering@xenovex.com"
   },
   "ConnectionStrings": {
-    "SteConnnectionString": "Data Source=XTS-LAPTOP011\\SQLEXP2016;Initial Catalog=steportal_live;User Id=sa;Password=xts@12345;Integrated Security=false;MultipleActiveResultSets=True;"
+    "ConnnectionString": "Data Source=192.168.0.226\\SQLDEV2016;Initial Catalog=Geosemantic_dev;User Id=sa;Password=xts@12345;Integrated Security=false;MultipleActiveResultSets=True;"
   },
   "Oauth": {
     "TokenEndpoint": "/api/token",
