--- a/Geosemantic.Api/appsettings.Production.json
+++ b/Geosemantic.Api/appsettings.Production.json
@@ -13,10 +13,10 @@
   "EmailSettings": {
     "SmtpServer": "smtp.1and1.com",
     "SmtpPort": 587,
-    "SmtpEnableSsl": false,
+    "SmtpEnableSsl": true,
     "SmtpUsername": "donotreply@xenovex.com",
     "SmtpPassword": "Emaillog$2018",
-    "SmtpFrom": "steengineering@xenovex.com"
+    "SmtpFrom": "donotreply@xenovex.com"
   },
   "ConnectionStrings": {
     "ConnnectionString": "Data Source=192.168.0.226\\SQLDEV2016;Initial Catalog=Geosemantic_dev;User Id=sa;Password=xts@12345;Integrated Security=false;MultipleActiveResultSets=True;"
