--- a/Geosemantic.Api/appsettings.Production.json
+++ b/Geosemantic.Api/appsettings.Production.json
@@ -15,7 +15,7 @@
     "SmtpPort": 587,
     "SmtpEnableSsl": true,
     "SmtpUsername": "donotreply@xenovex.com",
-    "SmtpPassword": "Emaillog$2018",
+    "SmtpPassword": "mailLog$321",
     "SmtpFrom": "donotreply@xenovex.com"
   },
   "ConnectionStrings": {
