--- a/Geosemantic.Api/appsettings.Production.json
+++ b/Geosemantic.Api/appsettings.Production.json
@@ -11,12 +11,12 @@
     "SendGridApiKey": "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"
   },
   "EmailSettings": {
-    "SmtpServer": "smtp.1and1.com",
+    "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
     "SmtpEnableSsl": true,
-    "SmtpUsername": "donotreply@xenovex.com",
-    "SmtpPassword": "mailLog$321",
-    "SmtpFrom": "donotreply@xenovex.com"
+    "SmtpUsername": "geosemantic2018@gmail.com",
+    "SmtpPassword": "xts@12345",
+    "SmtpFrom": "geosemantic2018@gmail.com"
   },
   "ConnectionStrings": {
     "ConnnectionString": "Data Source=192.168.0.226\\SQLDEV2016;Initial Catalog=Geosemantic_dev;User Id=sa;Password=xts@12345;Integrated Security=false;MultipleActiveResultSets=True;"
