--- a/Geosemantic.Client/angular.json
+++ b/Geosemantic.Client/angular.json
@@ -23,7 +23,7 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "src/tsconfig.app.json",
                         "assets": [
-                            "src/favicon.ico",
+                            "src/favicon.svg",
                             "src/assets"
                         ],
                         "styles": [
@@ -107,7 +107,7 @@
                         ],
                         "scripts": [],
                         "assets": [
-                            "src/favicon.ico",
+                            "src/favicon.svg",
                             "src/assets"
                         ]
                     }
