--- a/Geosemantic.Api/web.config
+++ b/Geosemantic.Api/web.config
@@ -7,9 +7,9 @@
     </handlers>
     <aspNetCore processPath="dotnet" arguments=".\Geosemantic.Api.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" >
       <environmentVariables>
-        <!--<environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />-->
+        <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
         <!--<environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Testing" />-->
-        <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
+        <!--<environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />-->
       </environmentVariables>
     </aspNetCore>
     <modules>
