--- a/Geosemantic.Api/Geosemantic.Api.csproj
+++ b/Geosemantic.Api/Geosemantic.Api.csproj
@@ -33,4 +33,10 @@
     <ProjectReference Include="..\Geosemantic.ViewModel\Geosemantic.ViewModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="web.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
